k8s/10-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: yellow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 289179428758.dkr.ecr.ap-southeast-1.amazonaws.com/yellow-backend:314c14985c308ae39533d99ba6b774ec2e3634e6
          ports:
            - containerPort: 3333
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: yellow
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 3333
    - name: direct
      port: 3333
      targetPort: 3333
