k8s/20-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: yellow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 289179428758.dkr.ecr.ap-southeast-1.amazonaws.com/yellow-frontend:314c14985c308ae39533d99ba6b774ec2e3634e6
          workingDir: /app/apps/frontend
          command: ["node"]
          args: ["server.js"]
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: yellow
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
